Update ConfigHelper.java